# Graph-of-Trace-Visualizing-Execution-Trace-of-Scientific-Agents

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py  tool.py
Monitor/: __init__.py  got_writer.py  server.py  steps_graph.py  steps_llm.py
Monitor/adapter/: __init__.py  anthropic_adapter.py  azure_adapter.py  base_adapter.py  deepseek_adapter.py  openai_adapter.py  registry.py
Monitor/config/: __init__.py  config.yaml  local.yaml  parser.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: got.json
frontend/src/: MindmapView.tsx  got-to-reactflow.ts  main.tsx
prompts/: got_system_prompt.md
scripts/: start.sh
tests/: test_adapters.py  test_imports.py  test_mcp_server.py  test_output_config.py  test_smoke.py  test_transports.py
