[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-of-trace"
version = "0.1.0"
description = "Agent-agnostic monitoring framework that records scientific-agent execution traces into a Graph-of-Trace DAG, exposed as an MCP tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "agent", "trace", "visualization", "graph-of-trace", "scientific-agent"]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/your-org/Graph-of-Trace-Visualizing-Execution-Trace-of-Scientific-Agents"

[tool.setuptools]
py-modules = ["server", "tool"]

[tool.setuptools.packages.find]
include = ["Monitor*"]
